tests/good/typing/030-fun-unification-2.clap
val f = fun (x : int) => x
