tests/bad/lexical/074-fun-3.clap
val f = fun (x : { U }) (y : { U }) -> x
 
